welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:4: error: not found: value nBiscuit
	if (estSurBiscuit()) {nbBiscuit=nBiscuit+1}
                                        ^Poucet:6: error: type mismatch;
 found   : Int(2)
 required: String
	if (nbBiscuit<=2) {doite()}
                       ^Poucet:6: error: not found: value doite
	if (nbBiscuit<=2) {doite()}
                           ^